--- a/src/SigfoxCloud/servicesettings.json
+++ b/src/SigfoxCloud/servicesettings.json
@@ -1,5 +1,5 @@
 ﻿{
-    "host": "sigfoxmonitoring",
+    "host": "OlivierDemo",
     "keyName": "iothubowner",
-    "key": "B2LsypvIEz7bdy0217QYfeUvO1xUjKVujlte4wETrvM="
+    "key": "dxk++3uzE2XPmIFdRqafZQ=="
 }
