--- a/src/DecoderJob/DecoderJob.csproj
+++ b/src/DecoderJob/DecoderJob.csproj
@@ -112,6 +112,7 @@
     <Compile Include="RawMessage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebJobsHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
