--- a/src/AlertJob/App.config
+++ b/src/AlertJob/App.config
@@ -56,6 +56,8 @@
   </system.serviceModel>
   <appSettings>
     <!-- Service Bus specific app setings for messaging connections -->
+    <add key="SigfoxDemoEventHubNameDispatch" value="dispatch" />
+    <add key="SigfoxDemoEventHubConsumerStorage" value="storage" />
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
