--- a/src/AlertJob/packages.config
+++ b/src/AlertJob/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.11" targetFramework="net46" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
+  <package id="StackExchange.Redis" version="1.0.488" targetFramework="net46" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net45" />
   <package id="WindowsAzure.ServiceBus" version="3.1.5" targetFramework="net46" />
   <package id="WindowsAzure.Storage" version="6.2.0" targetFramework="net45" />
