--- a/src/EmailJob/EmailJob.csproj
+++ b/src/EmailJob/EmailJob.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8F17226C-481D-4DA8-A02B-E8AB670CDD24}</ProjectGuid>
+    <ProjectGuid>{7CFFCF5C-1428-4EC5-A0D8-F30A2A004CF5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DecoderJob</RootNamespace>
-    <AssemblyName>DecoderJob</AssemblyName>
+    <RootNamespace>StorageJob</RootNamespace>
+    <AssemblyName>StorageJob</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
@@ -86,6 +86,10 @@
       <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="StackExchange.Redis, Version=1.0.316.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\StackExchange.Redis.1.0.488\lib\net45\StackExchange.Redis.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -109,12 +113,8 @@
     <Compile Include="WebJobsHelper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ConnectionStrings.config">
-      <SubType>Designer</SubType>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Include="App.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\sigfoxdemo - Web Deploy.pubxml" />
@@ -133,6 +133,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SigfoxDemoLib\SigfoxDemoLib.csproj">
+      <Project>{1ff45cef-823d-4a43-a1c6-b5ba6d4a385e}</Project>
+      <Name>SigfoxDemoLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SigfoxLib\SensitLib.csproj">
       <Project>{10aac5b1-c6bc-4b59-afe2-35e6b2ef0276}</Project>
       <Name>SensitLib</Name>
