--- a/src/EmailJob/App.config
+++ b/src/EmailJob/App.config
@@ -55,6 +55,10 @@
     </extensions>
   </system.serviceModel>
   <appSettings>
+    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[your secret]" />
+    <add key="SendGridUser" value="azure_9c85b80df0ae27a3c8b1873e31000a06@azure.com" />
+    <add key="SendGridPass" value="sigfoxdemo16!" />
+    <add key="SendGridAPIKey" value="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" />
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
