--- a/src/EmailJob/packages.config
+++ b/src/EmailJob/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Azure.ServiceBus.EventProcessorHost" version="2.1.3" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net45" />
@@ -8,8 +9,10 @@
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.11" targetFramework="net46" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
+  <package id="Sendgrid" version="6.3.4" targetFramework="net46" />
+  <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net46" />
   <package id="StackExchange.Redis" version="1.0.488" targetFramework="net46" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net45" />
-  <package id="WindowsAzure.ServiceBus" version="3.1.5" targetFramework="net46" />
+  <package id="WindowsAzure.ServiceBus" version="3.1.6" targetFramework="net46" />
   <package id="WindowsAzure.Storage" version="6.2.0" targetFramework="net45" />
 </packages>
