--- a/src/AlertLog/AlertLog.csproj
+++ b/src/AlertLog/AlertLog.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{96C23C65-B6BB-4ADC-8F7B-CEAEA780CDEE}</ProjectGuid>
+    <ProjectGuid>{B76375C1-08AC-4C15-8049-E5FF0DAEF762}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IngestionLog</RootNamespace>
-    <AssemblyName>IngestionLog</AssemblyName>
+    <RootNamespace>AlertLog</RootNamespace>
+    <AssemblyName>AlertLog</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
